# yeti-python-package

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: Makefile  pyproject.toml  setup.cfg
